style.css
#myPicture
{
    width: 300px;
}


body
{
    text-align: center;
    font-size: larger;
    margin:0;
    padding:0;
    overflow-x:hidden;
    background-color:azure;
}

.hugeNiceText
{
    font-size: 80px;
    font-family: 'The Nautigal', cursive;
}

.buttonLinks a
{
background-color:darkgoldenrod;
padding: 15px;
border-radius: 10px;
    margin: 22px 5px;
    font-size: large;
    font-family: 'Arvo', serif;
    text-decoration: none;
    color: white;

}

#contactCard a
{
background-color:saddlebrown;
padding: 15px;
border-radius: 15px;
    margin: 22px 0px 22px 22px;
    font-size:medium;
    font-family: 'Roboto', sans-serif;
    text-decoration: none;
    color: white;
    
}


#footer
{
    margin: auto;
    padding: 250px 25% 25px 25%;
    background-color:aquamarine ;
    font-size: medium;
}

#pageContent
{
    
    margin: 100px 15% 125px 15%;
    font-size: larger;

    
}


.project
{

    margin: 20px;
    border-radius: 35px;
    padding: 40px 30px 60px 30px;
background-color:khaki;
border: solid 2px;

width: 70%;
margin: 30px auto;


}


.project p
{
text-align: left;
margin: 3% 5%;
}

.projectImage
{
border-radius: 15px;
    width: 270px;
    
   
}



#textParagraph
{
    
    text-align: left;
    margin: auto;
    width: 80%;
    font-size: 110%;
    
    
    background-color: wheat;
    padding: 10px 4%;
    border-radius: 50px;

    

}

#textParagraph2
{
    
    text-align:center;
    margin: auto;
    width: 330px;
    height: 330px;

    font-size: 90%;
    
    
    
    background-color: wheat;
    padding: 20px;
    border-radius: 180px;

    

}


#contactCard
{
    
    text-align: left;
    margin: auto;
    width: 400px;
    font-size: 95%;

    background-color: antiquewhite;
    padding: 0% 5% 80px 5%;
    border: solid 2px;
    border-radius: 30px;


}



.icon
{
    width: 25px;
    height: 25px;
}
/*
#languageButton
{
    background-color: burlywood;
    
    width: 20%;
    border-bottom-right-radius: 4vw;
    border-top-right-radius: 4vw;
    text-decoration: none;
    padding: 5px;
    font-family: 'Arvo', serif;  
}
*/
#languageButton a
{
    
    color:white;
    text-decoration: none;
    font-family: 'Arvo', serif;
    font-size: medium;
    margin: 22px 0px;
      
}


#languageButton
{
    background-color: darkgoldenrod;
    position:absolute;
    float: left;
    border-radius: 25px;
    width: 120px;
    padding: 10px;
    margin: 5px;
    
}


#languageIcon
{
position:relative;
float: left;
width: 25px;
}

#Designer
{
  font-size:70%;
}

#DecorativePicture
{
    width: 300px;
    margin-top: 50px;
}


/* when the viewport is 600px or smaller, these apply: */
@media screen and (max-width: 600px) {
     #pageContent {
      width: 97%; 
      margin: 50px 5px 125px 10px;
    }

    #contactCard
    {
        width: 86%;
    }



    #textParagraph2
    {
        width: 300px;
        height: 300px;
                  
    }

.project
{
    width: auto;
margin: 20px;
}

.project p
{

margin: 3% 0%;
}


#textParagraph
{
    width: 90%;

}

#contactCard a
{
    font-size: 58%;
}

.hugeNiceText
{
    font-size: 350%;
}

.projectImage
{

    width: 250px;
   
}







#languageButton a
{
    
    

    font-size: small;
    margin: 11px 0px;
      
}


#languageButton
{
    
    
    
    border-radius: 25px;
    width: 95px;
    padding: 5px;
    margin: 5px;
    
}


#languageIcon
{
position:relative;
float: left;
width: 25px;
}



  }

